--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,6 @@ Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Imports: Rcpp (>= 0.12.12), RcppEigen (>= 0.3.3.3.0),BH
-LinkingTo: Rcpp, RcppEigen,BH,Rhdf5lib
+LinkingTo: Rcpp, RcppEigen,BH,Rhdf5lib,libblosc
 Remotes: bioc::Rhdf5lib
 Suggests: testthat
