--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,7 @@ License: What license is it under?
 Imports: Rcpp (>= 0.12.12), RcppEigen (>= 0.3.3.3.0),BH
 LinkingTo: Rcpp, RcppEigen,BH,Rhdf5lib,libblosc
 Remotes: bioc::Rhdf5lib
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
