--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: EigenH5
 Type: Package
-Title: What the package does (short line)
+Title: Read and write R objects using blosc+HDF5
 Version: 1.0
 Date: 2017-08-03
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
+Author: Nicholas Knoblauch
+Maintainer: Nicholas Knoblauch <nwknoblauch@gmail.com>
+Description: Read and write R objects using blosc+HDF5. Also contains a C++ interface for using with other packages
 License: What license is it under?
 Imports: Rcpp (>= 0.12.12), RcppEigen (>= 0.3.3.3.0),BH
 LinkingTo: Rcpp, RcppEigen,BH,Rhdf5lib,libblosc,RcppProgress
-Remotes: bioc::Rhdf5lib
+Remotes: CreRecombinase/Rhdf5lib
 Suggests: testthat,
     knitr,
     rmarkdown
