added lzf(in a really hacky way

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,5 @@ import(libblosc)
 import(RcppEigen)
 importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
+importFrom(magrittr,"%>%")
+importFrom(rlang,"!!")
