--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Nicholas Knoblauch
 Maintainer: Nicholas Knoblauch <nwknoblauch@gmail.com>
 Description: Read and write R objects using blosc+HDF5. Also contains a C++ interface for using with other packages
 License: What license is it under?
-Imports: Rcpp (>= 0.12.12), RcppEigen (>= 0.3.3.3.0),BH
+Imports: Rcpp (>= 0.12.12), RcppEigen (>= 0.3.3.3.0),BH,dplyr,progress,tidyr,purrr,magrittr
 LinkingTo: Rcpp, RcppEigen,BH,Rhdf5lib,libblosc,RcppProgress
 SystemRequirements: C++11
 Remotes: CreRecombinase/Rhdf5lib,CreRecombinase/libblosc
