--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: EigenH5
 Type: Package
 Title: Read and write R objects using blosc+HDF5
-Version: 1.0
+Version: 1.1
 Date: 2017-08-03
 Author: Nicholas Knoblauch
 Maintainer: Nicholas Knoblauch <nwknoblauch@gmail.com>
-Description: Read and write R objects using blosc+HDF5. Also contains a C++ interface for using with other packages
+Description: Read and write R objects using blosc+HDF5. Also contains a C++ interface for using with other packages. The C++ interface can handle the reading/writing/converting between column-major matrices (as in R/fortran) and row-major matrices (as in HDF5) 
 License: What license is it under?
-Imports: Rcpp (>= 0.12.12), RcppEigen (>= 0.3.3.3.0),BH,dplyr,progress,tidyr,purrr,magrittr
-LinkingTo: Rcpp, RcppEigen,BH,Rhdf5lib,libblosc,RcppProgress,RcppParallel
+Imports: Rcpp (>= 0.12.12), RcppEigen (>= 0.3.3.3.0),BH,dplyr,progress,tidyr,purrr,magrittr,future
+LinkingTo: Rcpp, RcppEigen,BH,Rhdf5lib,libblosc,RcppProgress
 SystemRequirements: C++11
 Remotes: CreRecombinase/Rhdf5lib,CreRecombinase/libblosc
 Suggests: testthat,
