--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ if(FIND_HDF5)
   find_package(HDF5 COMPONENTS C HL REQUIRED)
   if(HDF5_FOUND)
     target_link_libraries(eigenh5 ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES})
+    message (STATUS  "Including HDF5 directorie(s): ${HDF5_INCLUDE_DIRS}")
     include_directories(${HDF5_INCLUDE_DIRS})
   endif()
 endif()
