added ability to symlink

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 useDynLib(EigenH5,.registration=TRUE)
 importFrom(Rcpp, evalCpp)
+importFrom(R6,R6Class)
 exportPattern("^[[:alpha:]]+")
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
