re-added rhdf5lib

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-useDynLib(EigenH5,.registration=TRUE)
+useDynLib(EigenH5)
 importFrom(Rcpp, evalCpp)
 importFrom(R6,R6Class)
 exportPattern("^[[:alpha:]]+")
