--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,9 +1,9 @@
 CXX_STD = CXX17
 #RHDF5_LIBS=`echo 'Rhdf5lib::pkgconfig("PKG_C_LIBS")'|\
     "${R_HOME}/bin/R" --vanilla --slave`
-#BLOSC_CFLAGS+=$(shell echo 'libblosc::pkgconfig("PKG_CFLAGS")'|\
+BLOSC_CFLAGS+=$(shell echo 'libblosc::pkgconfig("PKG_CFLAGS")'|\
 "${R_HOME}/bin/R" --vanilla --slave)
-#PKG_LIBS+=$(shell echo 'libblosc::pkgconfig("PKG_LIBS_static")' |\
+PKG_LIBS+=$(shell echo 'libblosc::pkgconfig("PKG_LIBS_static")' |\
 "${R_HOME}/bin/R" --vanilla --slave)
 
 PKG_LIBS += @HDF5_LIBS@  -lstdc++fs @LIBS@
