vendoring zstd (in rzstdlib)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,11 @@ Version: 1.2
 Date: 2017-08-03
 Author: Nicholas Knoblauch
 Maintainer: Nicholas Knoblauch <nwknoblauch@gmail.com>
-Description: Read and write R objects using blosc+HDF5. Also contains a C++ interface for using with other packages. The C++ interface can handle the reading/writing/converting between column-major matrices (as in R/fortran) and row-major matrices (as in HDF5) 
+Description: Read and write R objects using zstd+HDF5. Also contains a C++ interface for using with other packages. The C++ interface can handle the reading/writing/converting between column-major matrices (as in R/fortran) and row-major matrices (as in HDF5) 
 License: What license is it under?
 biocViews:
 Imports: Rcpp (>= 0.12.12), RcppEigen (>= 0.3.3.3.0),BH,dplyr,progress,tidyr,purrr,magrittr,zstdr,R6,fs,zstdr
-LinkingTo: Rcpp, RcppEigen,BH,RcppProgress,testthat,Rhdf5lib
+LinkingTo: Rcpp, RcppEigen,BH,RcppProgress,testthat,Rhdf5lib,rzstdlib
 SystemRequirements: C++11, HDF5 (>= 1.8.13), blosc
 Suggests: testthat,
     knitr,
