--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,5 @@ useDynLib(EigenH5,.registration=TRUE)
 importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
 importFrom(magrittr,"%>%")
+importFrom(rlang,"%||%")
 importFrom(rlang,"!!")
