--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,5 @@ exportPattern("^[[:alpha:]]+")
 importFrom(magrittr,"%>%")
 importFrom(rlang,"%||%")
 importFrom(rlang,"!!")
+importFrom("methods", "formalArgs", "hasArg")
+importFrom("stats", "offset")
