--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/setup-r@master
       - name: Install HDF5
-        run: Rscript -e "install.packages(c('remotes', 'rcmdcheck'))" -e "remotes::install_bioc("Rhdf5lib")
+        run: Rscript -e "install.packages(c('remotes', 'rcmdcheck'))" -e "remotes::install_bioc('Rhdf5lib')"
       - name: Install dependencies
         run: Rscript -e "install.packages(c('remotes', 'rcmdcheck'))" -e "remotes::install_deps(dependencies = TRUE)"
       - name: Check
